fixed minor spacing details

--- a/client/src/component/styles/chat.css
+++ b/client/src/component/styles/chat.css
@@ -58,14 +58,14 @@
     border-radius: 3.25rem; 
     box-shadow: 0 0 3px black;
 }
-.private-chat { margin-top: 4rem; height: 30rem; width: 80%; overflow-y: auto; }
+.private-chat { margin: 4rem 0 0 10%; height: 30rem; width: 80%; overflow-y: auto; }
 .private-chat::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* make scrollbar transparent */
 }
 
 .text-format {
-    margin: 18px 0 3px 3px;
+    margin: 1rem auto 3px 3px;
     flex-direction: column;
     align-items: unset;
     max-width: 80%;
