--- a/client/src/component/styles/form.css
+++ b/client/src/component/styles/form.css
@@ -1,12 +1,12 @@
 .login {
     margin-bottom: clamp(0.1rem, 7.5vw, 10rem);
     flex-direction: column;
-    row-gap: 1.75rem;
+    row-gap: 2rem;
     color: white;
     animation: fadeSlideUp 0.4s ease-in;
 }
 .login * { margin: 0 auto; }
-.login-label { text-align: center; width: 100%; font-size: 1.25rem; color: rgb(36, 36, 141); }
+.login-label { margin-top: 1rem; text-align: center; width: 100%; font-size: 1.25rem; color: rgb(36, 36, 141); }
 .login input { width: 60%; box-shadow: 0 0 3px; border-radius: 3px;}
 .login input:focus { outline-color: rgb(36, 36, 141); }
 .sign-in-btn { font-size: clamp(0.875rem, 2.5vw, 1rem); width: 60%; min-height: 40px; background: rgb(36, 36, 141); color: white; box-shadow: 0 0 3px grey;}
